linked menu. linked new state js file to deal with toggled states. added functioning tabs to different sections of the page. Fixed truncation problem.

--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,10 @@ img {
   max-width: 100%;
 }
 
+.main-nav ul {
+  display: hidden;
+}
+
 li {
   list-style: none;
 }
