--- a/css/modules.css
+++ b/css/modules.css
@@ -20,3 +20,11 @@
 .visible {
   display: block;
 }
+
+.social-menu {
+
+}
+
+.icon-menu {
+  width: 20%;
+}
